// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should match snapshot when empty 1`] = `
<p
  class="root"
/>
`;

exports[`<Text /> should match snapshot with text 1`] = `
<p
  class="root"
>
  Hello World
</p>
`;

exports[`<Text /> when muted should match snapshot 1`] = `
<p
  class="root muted"
>
  Hello World
</p>
`;
